--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=mhp-desk-booking-backend
+spring.profiles.active=${SPRING_PROFILE}
+
+# JPA / Hibernate
+spring.jpa.properties.hibernate.archive.autodetection=class, hbm
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=legacy
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.connection.characterEncoding=utf8
+spring.jpa.properties.hibernate.connection.CharSet=utf8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.open-in-view=false
+
+cors.origins='*'
