check if room is available

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
 # Spring Datasource
-spring.datasource.url=jdbc:postgresql://localhost:63500/postgres
+spring.datasource.url=jdbc:postgresql://localhost:63500/mhp-desk-booking
 spring.datasource.username=mhp-desk-booking
 spring.datasource.password=12345678
