--- a/dockerdeployment/mhp-desk-booking-backend/docker-compose.yml
+++ b/dockerdeployment/mhp-desk-booking-backend/docker-compose.yml
@@ -29,11 +29,16 @@ services:
       - DB_PASSWORD=12345678
     networks:
       - mhp-desk-booking-default
-    ports:
-      - "8080:8080"
+      - traefik_default
+    labels:
+      - "traefik.http.services.mhp-desk-booking-backend-api.loadbalancer.server.port=8080"
+      - "traefik.enable=true"
+      - "traefik.http.routers.mhp-desk-booking-backend.rule=Host(`mhp-desk-booking-backend.galitianu.com`)"
+      - "traefik.http.routers.mhp-desk-booking-backend.entrypoints=websecure"
+      - "traefik.http.routers.mhp-desk-booking-backend.tls.certresolver=myresolver"
 networks:
   mhp-desk-booking-default:
-  portainer_default:
+  traefik_default:
     external: true
 
 volumes:
